--- a/style.css
+++ b/style.css
@@ -1,8 +1,16 @@
 *{
     padding:0;
     margin:0;
+    color:gray;
+    font-family:arial;
+}
+
+.header{
+    height:40px;
+    background: orange;
 }
 
 h4{
     text-transform: capitalize;
+    font-size:25px;
 }
